Removing nodemon from start script

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Node app for XHR processing",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "jasmine"
   },
   "dependencies": {
